<resources>
    <string name="app_name">WalmartApp</string>
    <string name="signaccount">Sign in to your account</string>
    <string name="email_label">Email address (required)</string>
    <string name="pass_label">Password (required)</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="signbutton">Sign In</string>
    <string name="noaccount">"Don't have an account"</string>
    <string name="newaccount">"Create a new account"</string>
    <string name="string_elec">Electronics</string>
    <string name="string_clothing">Clothing</string>
    <string name="string_beauty">Beauty</string>
    <string name="string_food">Food</string>
    <string name="string_firstname">First name*</string>
    <string name="string_lastname">Last name*</string>
    <string name="string_email">Email address*</string>
    <string name="string_password">Password*</string>
    <string name="string_req">* required field</string>
    <string name="string_create">Create your account</string>
    <string name="string_register">Create Account</string>
</resources>
