<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginTop="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/createlabel"
        android:text="@string/string_create"
        android:textColor="@color/gray"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/background_b"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createlabel">

        <TextView
            style="@style/label"
            android:textStyle="bold"
            android:text="@string/string_req" />

        <TextView
            style="@style/label"
            android:text="@string/string_firstname"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/firstname"
            android:inputType="textPersonName"
            style="@style/input"/>

        <TextView
            style="@style/label"
            android:layout_marginTop="15dp"
            android:text="@string/string_lastname" />

        <EditText
            android:id="@+id/lastname"
            android:inputType="textPersonName"
            style="@style/input" />

        <TextView
            style="@style/label"
            android:layout_marginTop="15dp"
            android:text="@string/string_email" />

        <EditText
            android:id="@+id/username"
            style="@style/input"
            android:inputType="textEmailAddress"/>

        <TextView
            style="@style/label"
            android:layout_marginTop="15dp"
            android:text="@string/string_password" />

        <EditText
            android:id="@+id/password"
            style="@style/input"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blue"
            android:minHeight="55dp"
            android:text="@string/string_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:theme="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>