<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    tools:context=".ShopCategory">

    <TextView
        android:id="@+id/statustext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="12dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/statustext">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/elecimg"
                android:scaleType="fitCenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                app:srcCompat="@drawable/elec" />

            <ImageButton
                android:id="@+id/cloimg"
                android:scaleType="fitCenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                app:srcCompat="@drawable/clot" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="17dp">

            <TextView
                android:id="@+id/eleclabel"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_elec" />

            <TextView
                android:id="@+id/clolabel"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_clothing" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/beaimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:onClick="onClick"
                app:srcCompat="@drawable/beat" />

            <ImageButton
                android:id="@+id/food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:scaleType="fitCenter"
                android:onClick="onClick"
                app:srcCompat="@drawable/food"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bealabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/string_beauty" />

            <TextView
                android:id="@+id/foodlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/string_food" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>